remove costs module, fix salaries module, prepare for new data

--- a/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
+++ b/Budfirmex/src/app/buildings/components/building-personnel/building-personnel.component.html
@@ -26,8 +26,9 @@
       </div>
     </div>
   </div>
-  <br><p class="box-title">Koszty budowy</p>
-  <button class="button__primary" [routerLink]="['/costs']" mat-raised-button>
+  <br>
+  <p class="box-title">Koszty budowy</p>
+  <button class="button__primary" [routerLink]="['/buildings/'+buildingId+'/costs']" mat-raised-button>
     Pokaż koszty budowy
   </button>
 </div>
