--- a/Budfirmex/src/app/buildings/components/construction-costs/construction-costs.component.html
+++ b/Budfirmex/src/app/buildings/components/construction-costs/construction-costs.component.html
@@ -16,7 +16,7 @@
     <tbody>
     <tr *ngFor="let cost of costs">
       <td>{{cost.id}}</td>
-      <td>{{cost.date | date:"MMMM"}}</td>
+      <td>{{cost.date | date:"MM"}}</td>
       <td>{{cost.date | date:"YYYY"}}</td>
       <td>{{cost.workersCost}}</td>
       <td>{{cost.equipmentCost}}</td>
