--- a/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
+++ b/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="col-md-3">
                 <div class="report-details__label--small">Data raportu</div>
-                <div class="report-details__value--small">{{ date | date}}</div>
+                <div class="report-details__value--small">{{ date | date: 'd MMMM y':'':'pl' }}</div>
             </div>
             <div class="col-md-3">
                 <div class="report-details__label--small">Pogoda</div>
